# flashfit

./: .gitignore  ChangeLog  Makefile.am  NEWS  README  RELEASE  absorbanceaxis.py  absorbancefit.py  absorbancegraph.py  appearance.py  changepointcounttask.py  configure.ac  console.py  data.py  data_fit.py  data_fit_parameter.py  data_original.py  fittask.py  flashfit.in  flashfit.nsis  flashfit.spec.in  font.py  graphicsscene.py  graphicsview.py  gui_absorbanceaxis.py  gui_absorbancefit.py  gui_absorbancegraph.py  gui_appearance.py  gui_fit.py  gui_graphicsscene.py  gui_graphicsview.py  gui_informationtable.py  gui_mainwindow.py  gui_menubar.py  gui_residualsgraph.py  gui_settings.py  gui_settings_axes.py  gui_settings_bars.py  gui_settings_compatible.py  gui_settings_experimental.py  (+30 more)
docs/: Makefile.am  manual.xml
tests/: Makefile.am  data
tests/absorbance/: 100108_045630.csv  Makefile.am  ph1.08_330nm.csv  ph1.08_350nm.csv  ph1.08_370nm.csv  ph1.08_395nm.csv  ph1.08_405nm.csv  ph1.85_330nm.csv  ph1.85_350nm.csv  ph1.85_370nm.csv  ph1.85_395nm.csv  ph1.85_405nm.csv  ph2.67_350nm.csv  ph2.67_370nm.csv  ph2.67_395nm.csv  ph2.67_405nm.csv
tests/luminance/: 12013011.csv  12013013.csv  12013014.csv  2012.1.30.docx
tests/luminiscence/: 120130009.csv  12013001.csv  12013002.csv  12013003.csv  12013004.csv  12013006.csv  12013007.csv  12013008.csv  12013010.csv  12013012.csv  2012.1.30.doc  BI30.DX  Makefile.am  luminiscence.csv
utils/: Makefile.am  frange.py  gen_ab.py  gen_ab_cd.py  gen_abc.py
