TESTS = data
check_SCRIPTS = data

EXTRA_DIST = $(check_SCRIPTS) luminance.csv 091221_010805_Ch1.csv 100107_015523.csv 100107_015635.csv 100108_045106.csv 100108_045630.csv 100108_045637.csv ph1.08_330nm.csv ph1.08_350nm.csv ph1.08_370nm.csv ph1.08_395nm.csv ph1.08_405nm.csv ph1.85_330nm.csv ph1.85_350nm.csv ph1.85_370nm.csv ph1.85_395nm.csv ph1.85_405nm.csv ph2.67_350nm.csv ph2.67_370nm.csv ph2.67_395nm.csv ph2.67_405nm.csv ph2.67.csv