EXTRA_DIST = \
  12.1.30.opj \
  120130009.csv \
  12013001.csv \
  12013002.csv \
  12013003.csv \
  12013004.csv \
  12013006.csv \
  12013007.csv \
  12013008.csv \
  12013010.csv \
  12013011.csv \
  12013012.csv \
  12013013.csv \
  12013014.csv \
  2012.1.30.doc \
  2012.1.30.docx \
  BI30.DX \
  luminiscence.csv
